# CMMC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
data/: Till_Tmat.txt  Till_Tmat_no_compton.txt  Till_winslow_Tmat.txt  Till_winslow_Tmat_no_compton.txt  Till_winslow_Trad.txt  Till_winslow_Trad_no_compton.txt  Till_yang_morel_a_Trad.txt  Till_yang_morel_a_b_Tmat.txt  Till_yang_morel_a_g_Tmat.txt  Till_yang_morel_a_r_Tmat.txt  Till_yang_morel_b_b_Tmat.txt  Till_yang_morel_b_b_Trad.txt  Till_yang_morel_b_g_Tmat.txt  Till_yang_morel_b_g_Trad.txt  Till_yang_morel_b_r_Tmat.txt  Till_yang_morel_b_r_Trad.txt  Till_yang_morel_c_b_Tmat.txt  Till_yang_morel_c_b_Trad.txt  Till_yang_morel_c_g_Tmat.txt  Till_yang_morel_c_g_Trad.txt  Till_yang_morel_c_r_Tmat.txt  Till_yang_morel_c_r_Trad.txt  Winslow_Tmat.txt  Winslow_Tmat_no_compton.txt  Winslow_Trad.txt  Winslow_Trad_no_compton.txt
data/Pomeraning_1kev_high/: 120kev.txt  200kev.txt  80kev.txt
data/Pomeraning_1kev_low/: 10kev.txt  40kev.txt  60kev.txt
data/Pomeraning_20kev_high/: 200kev.txt  300kev.txt
data/Pomeraning_20kev_low/: 10kev.txt  20kev.txt  40kev.txt  5kev.txt  60kev.txt
examples/: compton_pomraning.py  planck_examples.py  sample_gamma.py
examples.py/: pomeraning.py
examples/Pomeraning_1kev_low/: 5kev.txt
examples/Pomeraning_20kev_high/: 80kev.txt
examples/data/Pomeraning_1kev_high/: 300kev.txt
examples/data/Pomeraning_1kev_low/: 20kev.txt
examples/data/Pomeraning_20kev_high/: 120kev.txt
mg_solver/: analytic_example.py  mg_solver.py  pdv_motion.py  winslow_till.py
mg_solver/data_from_literature/: Till_winslow_Trad_no_compton.txt  Winslow_Tmat_only_compton.txt  Winslow_Trad.txt
src/: cmmc.cpp  cmmc.hpp  compton_matrix_mc.cpp  compton_matrix_mc.hpp  tau_matrix_monte_carlo.cpp  tau_matrix_monte_carlo.hpp
src/bind/: _cmmc.cpp  _compton_matrix_mc.cpp  _tau_matrix_monte_carlo.cpp
